--- a/Y/Config/DefaultEngine.ini
+++ b/Y/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/Step6.Step6
-EditorStartupMap=/Game/Step6.Step6
+GameDefaultMap=/Game/main.main
+EditorStartupMap=/Game/main.main
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
